--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
     <title>React App</title>
   </head>
   <body>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5616893703242330"
+     crossorigin="anonymous"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
